<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_notes">

    <fragment
        android:id="@+id/nav_notes"
        android:name="net.zhuruoling.nekomemo.notes.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/nav_reminder"
        android:name="net.zhuruoling.nekomemo.reminders.ReminderFragment"
        android:label="@string/menu_reminder"
        tools:layout="@layout/fragment_reminder" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="net.zhuruoling.nekomemo.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>