<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.zhuruoling.nekomemo.setting.SettingFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <net.zhuruoling.nekomemo.views.StatusCardView
                android:id="@+id/sync_status_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:clickable="true" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/information_card"
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                app:cardBackgroundColor="?colorSecondaryContainer">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="?dialogPreferredPadding">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/information_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?textAppearanceTitleMedium"
                        android:textColor="?colorOnErrorContainer" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/information_summary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?textAppearanceBodyMedium"
                        android:textColor="?colorOnErrorContainer" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/button_try_again"
                            style="?borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_try_again"
                            android:textAlignment="center"
                            android:tooltipText="@string/label_try_again" />
                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_data_sync_setting"
                        android:layout_width="match_parent"
                        style="@style/Widget.Material3.Button.TonalButton"
                        android:layout_height="wrap_content"
                        android:text="@string/label_configure_data_sync"
                        android:textAppearance="?textAppearanceTitleMedium"
                        android:textAlignment="center"
                        app:cornerRadius="10dp"
                        app:cardBackgroundColor="?colorSecondaryContainer"
                        android:tooltipText="@string/label_configure_data_sync" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_reminder_setting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.Material3.Button.TonalButton"
                        android:text="@string/label_note_setting"
                        android:textAppearance="?textAppearanceTitleMedium"
                        android:textAlignment="center"
                        app:cardBackgroundColor="?colorSecondaryContainer"
                        app:cornerRadius="10dp"
                        android:tooltipText="@string/label_note_setting" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_note_setting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.Material3.Button.TonalButton"
                        android:text="@string/label_reminder_setting"
                        app:cardBackgroundColor="?colorSecondaryContainer"
                        android:textAppearance="?textAppearanceTitleMedium"
                        android:textAlignment="center"
                        app:cornerRadius="10dp"
                        android:tooltipText="@string/label_reminder_setting" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>